--- a/slides/day_1_morning.html
+++ b/slides/day_1_morning.html
@@ -1158,36 +1158,30 @@ Carina Nigg, Judith Bouman
 <h1>Introduction</h1>
 
 </section>
-<section id="welcome" class="slide level2">
-<h2>Welcome</h2>
-</section>
 <section id="course-content" class="slide level2">
 <h2>Course content</h2>
 <div class="columns">
 <div class="column">
-<p>Some basic Math</p>
+<p><em>Introduction of R and RStudio</em></p>
 <ul>
-<li>Sets</li>
-<li>Equations</li>
-<li>Functions</li>
-<li>Minimizing / maximizing a function</li>
-<li>Exponents and logarithms</li>
+<li>Understanding R and RStudio</li>
+<li>Basic functions</li>
+<li>Write a first script</li>
+<li>Understanding packages</li>
+<li>Import data</li>
+<li>Basic functions on imported data</li>
 </ul>
 </div><div class="column">
-<p>Probability</p>
+<p><em>Analyzing your own data</em></p>
 <ul>
-<li>Basic rules in probability</li>
-<li>Conditional probability</li>
-<li>Random variables</li>
-<li>Probability distributions</li>
+<li>Organize your data</li>
+<li>Load your data into R</li>
+<li>Provide overview of your data</li>
+<li>Inspect missing data</li>
+<li>Check plausibility of your data</li>
 </ul>
 </div>
 </div>
-</section></section>
-<section>
-<section id="some-basic-math" class="title-slide slide level1 center">
-<h1>Some basic Math</h1>
-
 </section>
 <section id="sets" class="slide level2">
 <h2>Sets</h2>
